# johnny-five

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/commands/: integrate.md
.claude/designs/: memory-system-architecture.md
benchmarks/: BENCHMARKS.md  convomem_bench.py  locomo_bench.py  membench_bench.py  results_j5_convomem_hybrid_top10_20260423-093059.json  results_j5_convomem_raw_top10_20260423-093059.json  results_j5_locomo_hybrid_top10_20260423-053813.json  results_j5_locomo_raw_top10_20260423-053813.json  results_j5_membench_hybrid_top5_20260423-093059.json
docs/: AGENT_NOTES.md  BACKUP_AND_RESTORE.md  BEST_PRACTICES.md  CLAUDE_MD_SNIPPETS.md  INTEGRATION.md
docs/plans/: 2026-04-28-integration-onboarding-design.md  2026-05-04-memory-search-enhancements.md
memory/: lessons.md
setup/: CLAUDE.md.snippet  hooks.json.enforced.snippet  hooks.json.snippet
setup/cron/: README.md
setup/hooks/: memory-context-inject.sh  memory-discipline-enforce.js  memory-discipline-track.js  precompact-enforce.sh  session-start-recall.sh  tool-failure-tracker.js  user-prompt-correction.sh
setup/scripts/: backup-volume.sh  memory-export.py  memory-import.py  restore-volume.sh
src/claude_memory/: __init__.py  __main__.py  config.py  server.py
src/claude_memory/api/: __init__.py  (+1 more)
tests/: conftest.py  test_aging.py  test_dedup.py  test_hybrid_retrieval.py  test_long_retention.py  test_project_scope.py  test_queries.py  test_retrieval.py  test_scorer.py  test_summary_only.py  test_tag_filter.py
(+17 files in other folders)
